Update header text for the calculator
Signed-off-by: Jon Clark <chronicpainrewired@gmail.com>

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 <body>
 <div class="theme-toggle" onclick="toggleTheme()" title="Toggle Light/Dark Mode">Moon/Sun</div>
 <div class="card">
-  <h1>RoboTorqR: The RoboTorq Calculator making Robonomics easy <span class="tag">v6.3</span></h1>
+  <h1>Watts > Wall Street: Robonomics made easy ⚡<span class="tag">v6.3</span></h1>
   <div class="instructions">
     <strong>How to use:</strong><br>
     Fill in your robotic economy → Click a preset or "Calculate" → See your dividend by the day, second and year in both RT and USD.<br>
