Update title in index.html
Signed-off-by: Jon Clark <chronicpainrewired@gmail.com>

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>RoboTorqR - The RoboTorq Calculator v6.3 – Robonomics made easy</title>
+<title>Watts > Wall Street: Robonomics made easy </title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
   :root {
