Revise white paper link text for clarity
Updated the link text for the white paper to provide more context.

Signed-off-by: Jon Clark <chronicpainrewired@gmail.com>

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     <a href="https://github.com/GrokkingGrok/Project-Asimov/blob/MVP/design/src/asimov/flow/WattsGreaterThanWallStreet.md" 
       target="_blank" 
       class="whitepaper-btn">
-      📄 White Paper
+      📄 Read "Watts > Wall Street" to understand how Robonomics works for you
     </a>
   </p>
   <div class="instructions">
