Update header text for clarity and context
Signed-off-by: Jon Clark <chronicpainrewired@gmail.com>

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 <body>
 <div class="theme-toggle" onclick="toggleTheme()" title="Toggle Light/Dark Mode">Moon/Sun</div>
 <div class="card">
-  <h1>Watts > Wall Street <span class="tag">v9</span></h1>
+  <h1>Are Watts > Wall Street? Use the RoboTorq Dividend Projector and judge for yourself.<span class="tag">v9</span></h1>
   <p style="margin-top:0.5rem; font-size:0.9rem;">
     <a href="https://github.com/GrokkingGrok/Project-Asimov/blob/MVP/design/src/asimov/flow/WattsGreaterThanWallStreet.md" target="_blank" class="whitepaper-btn">
       Click here to read the Robonomics white paper: "Watts > Wall Street"
